--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <a target="_blank" href="https://icons8.com/icon/11205/hand-cursor">Hand Cursor</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
   <link rel="stylesheet" href="style/boot.css">
   <link rel="stylesheet" href="style/bootres.css">
 </head>
@@ -72,10 +73,9 @@
           <div class="col-sm-12 about">
             <h2>About</h2>
             <p>I'm a computer science student with a passion for <span>web development and machine learning</span> .
-              With expertise in front-end development and frameworks like<a href=""class="about-tech react"><span>React</span></a>, I create visually appealing and user-friendly
+              With expertise in front-end development and frameworks like <span>React</span> , I create visually appealing and user-friendly
               websites. In the realm of machine learning, I excel at data preprocessing, model building, and evaluation
-              using libraries such as <a href="" class="about-tech tensorflow"><span>Tensorflow</span></a> and <a
-                href="" class="about-tech scikit-learn"><span>scikit-learn</span></a>. I am committed to continuous
+              using libraries such as class="about-tech tensorflow"><span>Tensorflow</span> and <span>scikit-learn</span> I am committed to continuous
               learning and staying up-to-date with the latest technologies. Collaboration is important to me, and I have
               honed my teamwork and problem-solving skills through group projects, hackathons, and coding competitions.
               This portfolio website showcases my projects and experiences. Feel free to explore and reach out to me for
